--- a/code/2_data_exploration.ipynb
+++ b/code/2_data_exploration.ipynb
@@ -31,19 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "os.environ[\"STORAGE_MODE\"] = \"external\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "SLF4J: Class path contains multiple SLF4J bindings.\n",
-      "SLF4J: Found binding in [jar:file:/runtime-addons/spark247-13-hf2-tqmra9/opt/spark/jars/slf4j-log4j12-1.7.30.jar!/org/slf4j/impl/StaticLoggerBinder.class]\n",
-      "SLF4J: Found binding in [jar:file:/runtime-addons/spark247-13-hf2-tqmra9/opt/spark/optional-lib/hive-warehouse-connector-assembly-1.0.0.7.2.11.4-5.jar!/org/slf4j/impl/StaticLoggerBinder.class]\n",
-      "SLF4J: See http://www.slf4j.org/codes.html#multiple_bindings for an explanation.\n",
-      "SLF4J: Actual binding is of type [org.slf4j.impl.Log4jLoggerFactory]\n",
-      "Hive Session ID = d6d1a602-c3a0-4cc3-a63f-7325893ce208\n",
+      "Hive Session ID = 62117e18-c1df-4470-b889-abd59e70e786\n",
       "                                                                                \r"
      ]
     },
@@ -94,6 +102,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
@@ -117,7 +149,7 @@
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
@@ -141,7 +173,7 @@
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
@@ -165,7 +197,7 @@
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
@@ -188,30 +220,6 @@
        "      <td>1840.75</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9237-HQITU</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>No</td>\n",
-       "      <td>...</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Month-to-month</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Electronic check</td>\n",
-       "      <td>70.70</td>\n",
-       "      <td>151.65</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "<p>5 rows × 21 columns</p>\n",
@@ -219,37 +227,37 @@
       ],
       "text/plain": [
        "   customerID  gender SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0  7590-VHVEG  Female             0     Yes         No     1.0           No   \n",
-       "1  5575-GNVDE    Male             0      No         No    34.0          Yes   \n",
-       "2  3668-QPYBK    Male             0      No         No     2.0          Yes   \n",
-       "3  7795-CFOCW    Male             0      No         No    45.0           No   \n",
-       "4  9237-HQITU  Female             0      No         No     2.0          Yes   \n",
+       "0        None    None          None    None       None     NaN         None   \n",
+       "1  7590-VHVEG  Female             0     Yes         No     1.0           No   \n",
+       "2  5575-GNVDE    Male             0      No         No    34.0          Yes   \n",
+       "3  3668-QPYBK    Male             0      No         No     2.0          Yes   \n",
+       "4  7795-CFOCW    Male             0      No         No    45.0           No   \n",
        "\n",
        "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
-       "0  No phone service             DSL             No  ...               No   \n",
-       "1                No             DSL            Yes  ...              Yes   \n",
-       "2                No             DSL            Yes  ...               No   \n",
-       "3  No phone service             DSL            Yes  ...              Yes   \n",
-       "4                No     Fiber optic             No  ...               No   \n",
+       "0              None            None           None  ...             None   \n",
+       "1  No phone service             DSL             No  ...               No   \n",
+       "2                No             DSL            Yes  ...              Yes   \n",
+       "3                No             DSL            Yes  ...               No   \n",
+       "4  No phone service             DSL            Yes  ...              Yes   \n",
        "\n",
        "  TechSupport StreamingTV StreamingMovies        Contract PaperlessBilling  \\\n",
-       "0          No          No              No  Month-to-month              Yes   \n",
-       "1          No          No              No        One year               No   \n",
-       "2          No          No              No  Month-to-month              Yes   \n",
-       "3         Yes          No              No        One year               No   \n",
-       "4          No          No              No  Month-to-month              Yes   \n",
+       "0        None        None            None            None             None   \n",
+       "1          No          No              No  Month-to-month              Yes   \n",
+       "2          No          No              No        One year               No   \n",
+       "3          No          No              No  Month-to-month              Yes   \n",
+       "4         Yes          No              No        One year               No   \n",
        "\n",
        "               PaymentMethod MonthlyCharges  TotalCharges  Churn  \n",
-       "0           Electronic check          29.85         29.85     No  \n",
-       "1               Mailed check          56.95       1889.50     No  \n",
-       "2               Mailed check          53.85        108.15    Yes  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75     No  \n",
-       "4           Electronic check          70.70        151.65    Yes  \n",
+       "0                       None            NaN           NaN   None  \n",
+       "1           Electronic check          29.85         29.85     No  \n",
+       "2               Mailed check          56.95       1889.50     No  \n",
+       "3               Mailed check          53.85        108.15    Yes  \n",
+       "4  Bank transfer (automatic)          42.30       1840.75     No  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +275,7 @@
     "spark = SparkSession\\\n",
     "    .builder\\\n",
     "    .appName(\"Telco Data Set\")\\\n",
-    "    .master(\"local[*]\") \\\n",
+    "    .master(\"yarn\") \\\n",
     "    .getOrCreate()\n",
     "\n",
     "# read data into a Spark DataFrame\n",
@@ -322,16 +330,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7043"
+       "7044"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,9 +353,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -353,12 +372,19 @@
       "+---------------+-----+\n",
       "|InternetService|count|\n",
       "+---------------+-----+\n",
-      "|           null|   11|\n",
+      "|           null|   12|\n",
       "|    Fiber optic| 3096|\n",
       "|             No| 1520|\n",
       "|            DSL| 2416|\n",
       "+---------------+-----+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -381,9 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -391,11 +426,18 @@
       "+-----+--------+\n",
       "|Churn|count(1)|\n",
       "+-----+--------+\n",
-      "| null|      11|\n",
+      "| null|      12|\n",
       "|   No|    5163|\n",
       "|  Yes|    1869|\n",
       "+-----+--------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -415,8 +457,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "telco_data = telco_data_raw.filter(telco_data_raw.Churn.isNotNull())"
@@ -424,8 +468,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -433,7 +479,7 @@
        "'Customers total: 7032, Churned : 1869, Remained : 5163'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,8 +511,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -539,11 +587,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>tenure</th>\n",
-       "      <td>1</td>\n",
-       "      <td>34</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PhoneService</th>\n",
@@ -676,7 +724,7 @@
        "SeniorCitizen                    0             0               0   \n",
        "Partner                        Yes            No              No   \n",
        "Dependents                      No            No              No   \n",
-       "tenure                           1            34               2   \n",
+       "tenure                         1.0          34.0             2.0   \n",
        "PhoneService                    No           Yes             Yes   \n",
        "MultipleLines     No phone service            No              No   \n",
        "InternetService                DSL           DSL             DSL   \n",
@@ -699,7 +747,7 @@
        "SeniorCitizen                    0                 0  \n",
        "Partner                         No                No  \n",
        "Dependents                      No                No  \n",
-       "tenure                           2                 8  \n",
+       "tenure                         2.0               8.0  \n",
        "PhoneService                   Yes               Yes  \n",
        "MultipleLines                   No               Yes  \n",
        "InternetService        Fiber optic       Fiber optic  \n",
@@ -717,7 +765,7 @@
        "Churn                          Yes               Yes  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,15 +804,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cdsw/.local/lib/python3.7/site-packages/seaborn/distributions.py:2619: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
-      "  warnings.warn(msg, FutureWarning)\n"
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:12: UserWarning: \n",
+      "\n",
+      "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
+      "\n",
+      "Please adapt your code to use either `displot` (a figure-level function with\n",
+      "similar flexibility) or `histplot` (an axes-level function for histograms).\n",
+      "\n",
+      "For a guide to updating your code to use the new functions, please see\n",
+      "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
+      "\n",
+      "  if sys.path[0] == '':\n"
      ]
     },
     {
@@ -810,8 +869,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -858,8 +919,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -888,8 +951,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "spark.stop()"
@@ -929,7 +994,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
